# grok-code

./: .gitignore  .rustfmt.toml  Cargo.toml  EXAMPLES.md  QUICKSTART.md  README.md  TROUBLESHOOTING.md
.github/workflows/: ci.yml
plugins/: README.md  example-plugins.toml  word-counter.py  word-counter.toml
scripts/: coverage.sh  doc-header.html  generate-docs.sh  pre-commit-check.sh  profile.sh
src/: agent.rs  backup.rs  cache.rs  error.rs  keystore.rs  lib.rs  main.rs
src/api/: anthropic.rs  mod.rs  openai.rs  xai.rs
src/plugins/: mod.rs
src/tools/: analysis.rs  backup_ops.rs  external.rs  file_ops.rs  git_ops.rs  mod.rs  search.rs  shell.rs  utils.rs
src/tui/: diff.rs  mod.rs
tests/: agent_tools.rs  api_mocks.rs  cli_integration.rs  edge_cases.rs  keystore_integration.rs
tests/unit/: test_agent.rs  test_errors.rs  test_sanitization.rs
