[package]
name = "grok-code"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "A powerful CLI tool that provides a Claude-like coding assistant experience using the Grok API or OpenAI API"
documentation = "https://github.com/yourusername/grok-code"
homepage = "https://github.com/yourusername/grok-code"
repository = "https://github.com/yourusername/grok-code"
readme = "README.md"
keywords = ["ai", "coding-assistant", "cli", "grok", "openai"]
categories = ["command-line-utilities", "development-tools"]
license = "MIT"
exclude = [
    "tests/*",
    "examples/*",
    ".github/*",
    "*.log",
    "*.sh",
    "target/*",
]

[[bin]]
name = "grok-code"
path = "src/main.rs"

[lib]
name = "grok_code"
path = "src/lib.rs"

[dependencies]
async-trait = "0.1"
base64 = "0.22"
chrono = "0.4"
clap = { version = "4.5", features = ["derive"] }
colored = "3.0"
crossterm = "0.28"
dirs = "5.0"
git2 = "0.19"
keyring = "2.3"
once_cell = "1.20"
ratatui = "0.28"
regex = "1.11"
reqwest = { version = "0.12", features = ["json"] }
ropey = "1.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
thiserror = "1.0"
tokio = { version = "1.41", features = ["full"] }
toml = "0.8"
urlencoding = "2.1"
walkdir = "2.5"

[dev-dependencies]
tokio-test = "0.4.4"
tempfile = "3.14"
mockito = "1.5"
